--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/order-service
+#spring.datasource.username=root
+#spring.datasource.password=welega@1mas
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.sql.init.mode=always
+#spring.jpa.show-sql=true
+#
+#
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/order-service
+spring.datasource.username=root
+spring.datasource.password=welega@1mas
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+#spring.jpa.show-sql: true
+ spring.application.name=order-service
 
+server.port=0
+ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
