--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -13,3 +13,8 @@ spring.cloud.vault.scheme=http
 spring.cloud.vault.authentication=token
 spring.cloud.vault.token=s.L7jPLsZ6DhwKLbQZODJDYDOZ
 spring.cloud.vault.application-name=order-service
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
