--- a/products-service/src/main/resources/bootstrap.properties
+++ b/products-service/src/main/resources/bootstrap.properties
@@ -15,3 +15,8 @@ spring.cloud.vault.scheme=http
 spring.cloud.vault.authentication=token
 spring.cloud.vault.token=s.L7jPLsZ6DhwKLbQZODJDYDOZ
 spring.cloud.vault.application-name=products-service
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
