--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -18,3 +18,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.cloud.stream.bindings.notificationEventSupplier-out-0.destination=notification-events
+spring.cloud.stream.source=notificationEventSupplier
