--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -115,6 +115,11 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>5.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+			<version>3.0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
