--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -21,3 +21,6 @@ spring.rabbitmq.password=guest
 
 spring.cloud.stream.bindings.notificationEventSupplier-out-0.destination=notification-events
 spring.cloud.stream.source=notificationEventSupplier
+spring.slueth.integration.enabled=true
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
